--- a/saltysnacks/honey/honeyrecipe.html
+++ b/saltysnacks/honey/honeyrecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of honey butter chips</h1>
 
 
-        <img src="/saltyimages/honey_7.PNG" id="honey-7-big">
+        <img src="../../saltyimages/honey_7.PNG" id="honey-7-big">
  
 
-        <img src="/saltyimages/honey_6.PNG" id="honey-6-big">
+        <img src="../../saltyimages/honey_6.PNG" id="honey-6-big">
 
         <h1 id="selection">click either image to learn more about what makes honey special</h1>
 
@@ -63,7 +63,7 @@
 
         </h1>
 
-        <img src="/saltyimages/honey_6.PNG" id="honey-6">
+        <img src="../../saltyimages/honey_6.PNG" id="honey-6">
 
         <div id="slide1-box-1">
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/saltyimages/honey_7.PNG" id="honey-7">
+        <img src="../../saltyimages/honey_7.PNG" id="honey-7">
         
 
         <div id="recipe-box">
