--- a/saltysnacks/pancit/pancitmain.html
+++ b/saltysnacks/pancit/pancitmain.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pancit canton</title>
-    <link rel="stylesheet" href="/saltysnacks/pancit/pancitmain.css">
+    <link rel="stylesheet" href="pancitmain.css">
 
 </head>
 <body>
@@ -15,20 +15,20 @@
     
 <div>
 
-    <a href="/saltyaisle.html"><h1 id="return">return</h1></a>
+    <a href="../../saltyaisle.html"><h1 id="return">return</h1></a>
 
 </div>
 
 
 <div>
 
-    <img src="/saltyimages/pancit_1.PNG" id="pancit">
+    <img src="../../saltyimages/pancit_1.PNG" id="pancit">
 
 </div>
 
 <div>
 
-    <img src="/saltyimages/blue_circle.PNG" id="blue-circle">
+    <img src="../../saltyimages/blue_circle.PNG" id="blue-circle">
 
 </div>
 
