--- a/saltysnacks/pancit/pancitrecipe.html
+++ b/saltysnacks/pancit/pancitrecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of pancit canton</h1>
 
 
-        <img src="/saltyimages/pancit_5.PNG" id="pancit-7-big">
+        <img src="../../saltyimages/pancit_5.PNG" id="pancit-7-big">
  
 
-        <img src="/saltyimages/pancit_6.PNG" id="pancit-6-big">
+        <img src="../../saltyimages/pancit_6.PNG" id="pancit-6-big">
 
         <h1 id="selection">click either image to learn more about what makes pancit canton special</h1>
 
@@ -63,7 +63,7 @@
 
         </h1>
 
-        <img src="/saltyimages/pancit_6.PNG" id="pancit-6">
+        <img src="../../saltyimages/pancit_6.PNG" id="pancit-6">
 
         <div id="slide1-box-1">
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/saltyimages/pancit_7.PNG" id="pancit-7">
+        <img src="../../saltyimages/pancit_7.PNG" id="pancit-7">
         
 
         <div id="recipe-box">
