--- a/saltysnacks/shrimp/shrimphistory.html
+++ b/saltysnacks/shrimp/shrimphistory.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>white rabbit history</title>
-    <link rel="stylesheet" href="/saltysnacks/shrimp/shrimphistory.css">
+    <link rel="stylesheet" href="shrimphistory.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
     <div id="slider">
         <div class="slide active" id="slide-1">
 
-           <img src="/saltyimages/shrimp_2.PNG" id="shrimp-2">
+           <img src="../../saltyimages/shrimp_2.PNG" id="shrimp-2">
 
            <h1 id="header-1">
 
@@ -47,7 +47,7 @@
         <div class="slide">
 
         <div id="shrimp-images">
-            <img src="/saltyimages/shrimp_4.PNG" id="shrimp-4">
+            <img src="../../saltyimages/shrimp_4.PNG" id="shrimp-4">
 
         </div>
 
@@ -67,7 +67,7 @@
 
         <div class="slide">
 
-           <img src="/saltyimages/shrimp_3.PNG" id="shrimp-3">
+           <img src="../../saltyimages/shrimp_3.PNG" id="shrimp-3">
 
 
 
