--- a/saltysnacks/shrimp/shrimprecipe.html
+++ b/saltysnacks/shrimp/shrimprecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of shrimp crackers</h1>
 
 
-        <img src="/saltyimages/shrimp_5.PNG" id="shrimp-7-big">
+        <img src="../../saltyimages/shrimp_5.PNG" id="shrimp-7-big">
  
 
-        <img src="/saltyimages/shrimp_6.PNG" id="shrimp-6-big">
+        <img src="../../saltyimages/shrimp_6.PNG" id="shrimp-6-big">
 
         <h1 id="selection">click either image to learn more about what makes shrimp crackers special</h1>
 
@@ -63,7 +63,7 @@
 
         </h1>
 
-        <img src="/saltyimages/shrimp_6.PNG" id="shrimp-6">
+        <img src="../../saltyimages/shrimp_6.PNG" id="shrimp-6">
 
         <div id="slide1-box-1">
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/saltyimages/shrimp_7.PNG" id="shrimp-7">
+        <img src="../../saltyimages/shrimp_7.PNG" id="shrimp-7">
         
 
         <div id="recipe-box">
