--- a/sweetsnacks/panda/pandahistory.html
+++ b/sweetsnacks/panda/pandahistory.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>white rabbit history</title>
-    <link rel="stylesheet" href="/sweetsnacks/panda/pandahistory.css">
+    <link rel="stylesheet" href="pandahistory.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
     <div id="slider">
         <div class="slide active" id="slide-1">
 
-           <img src="/sweetimages/panda_3.PNG" id="panda-3">
+           <img src="../../sweetimages/panda_3.PNG" id="panda-3">
 
            <h1 id="header-1">
 
@@ -42,14 +42,14 @@
             </p>
            </div>
 
-           <img src="/doodles/red/history_doodle_1.png" id="history-1">
+           <img src="../../doodles/red/history_doodle_1.png" id="history-1">
 
 
         </div>
         <div class="slide"  id="slide-1">
 
         <div id="panda-images">
-            <img src="/sweetimages/panda_4.PNG" id="panda-4">
+            <img src="../../sweetimages/panda_4.PNG" id="panda-4">
 
         </div>
 
@@ -64,12 +64,12 @@
 
         </div>
 
-        <img src="/doodles/red/history_doodle_2.png" id="history-2">
+        <img src="../../doodles/red/history_doodle_2.png" id="history-2">
 
         </div>
         <div class="slide">
 
-           <img src="/sweetimages/panda_2.PNG" id="panda-2">
+           <img src="../../sweetimages/panda_2.PNG" id="panda-2">
 
 
         <div id=body-3>
@@ -87,8 +87,8 @@
 
     </div>
 
-    <img src="/sweetimages/pointleft_red.png" id="left-arrow">
-    <img src="/sweetimages/pointright_red.png" id="right-arrow">
+    <img src="../../sweetimages/pointleft_red.png" id="left-arrow">
+    <img src="../../sweetimages/pointright_red.png" id="right-arrow">
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 <script src="./pandahistory.js"> </script> 
