--- a/sweetsnacks/ramune/ramunehistory.html
+++ b/sweetsnacks/ramune/ramunehistory.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>white rabbit history</title>
-    <link rel="stylesheet" href="/sweetsnacks/ramune/ramunehistory.css">
+    <link rel="stylesheet" href="ramunehistory.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
     <div id="slider">
         <div class="slide active" id="slide-1">
 
-           <img src="/sweetimages/ramune_3.PNG" id="ramune-3">
+           <img src="../../sweetimages/ramune_3.PNG" id="ramune-3">
            
 
            <h1 id="header-1">
@@ -43,15 +43,15 @@
             </p>
            </div>
 
-           <img src="/doodles/red/history_doodle_1.png" id="history-1">
+           <img src="../../doodles/red/history_doodle_1.png" id="history-1">
 
 
         </div>
         <div class="slide">
 
         <div id="ramune-images">
-            <img src="/sweetimages/ramune_5.PNG" id="ramune-5">
-            <img src="/sweetimages/ramune_5.PNG" id="ramune-5-small">
+            <img src="../../sweetimages/ramune_5.PNG" id="ramune-5">
+            <img src="../../sweetimages/ramune_5.PNG" id="ramune-5-small">
 
         </div>
 
@@ -66,14 +66,14 @@
 
         </div>
 
-        <img src="/doodles/red/history_doodle_2.png" id="history-2">
+        <img src="../../doodles/red/history_doodle_2.png" id="history-2">
 
         </div>
 
 
         <div class="slide">
 
-           <img src="/sweetimages/ramune_2.png" id="ramune-2">
+           <img src="../../sweetimages/ramune_2.png" id="ramune-2">
 
 
         <div id=body-3>
@@ -84,7 +84,7 @@
 
             </p>
 
-            <img src="/doodles/red/ramune_bubble.png" id="ramune_bubble">
+            <img src="../../doodles/red/ramune_bubble.png" id="ramune_bubble">
 
 
         </div>
@@ -93,8 +93,8 @@
 
     </div>
 
-    <img src="/sweetimages/pointleft_red.png" id="left-arrow">
-    <img src="/sweetimages/pointright_red.png" id="right-arrow">
+    <img src="../../sweetimages/pointleft_red.png" id="left-arrow">
+    <img src="../../sweetimages/pointright_red.png" id="right-arrow">
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 <script src="./ramunehistory.js"> </script> 
