--- a/sweetsnacks/sachima/sachimarecipe.html
+++ b/sweetsnacks/sachima/sachimarecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of sachima</h1>
 
 
-        <img src="/sweetimages/sachima_7.PNG" id="sachima-7-big">
+        <img src="../../sweetimages/sachima_7.PNG" id="sachima-7-big">
  
 
-        <img src="/sweetimages/sachima_6.PNG" id="sachima-6-big">
+        <img src="../../sweetimages/sachima_6.PNG" id="sachima-6-big">
 
         <h1 id="selection">click either image to learn more about what makes sachima special</h1>
 
@@ -63,7 +63,7 @@
 
         </h1>
 
-        <img src="/sweetimages/sachima_6.PNG" id="sachima-6">
+        <img src="../../sweetimages/sachima_6.PNG" id="sachima-6">
 
         <div id="slide1-box-1">
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/sweetimages/sachima_7.PNG" id="sachima-7">
+        <img src="../../sweetimages/sachima_7.PNG" id="sachima-7">
         
 
         <div id="recipe-box">
