--- a/sweetsnacks/white rabbit/whiterabbithistory.html
+++ b/sweetsnacks/white rabbit/whiterabbithistory.html
@@ -3,30 +3,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>white rabbit history</title>
-    <link rel="stylesheet" href="/sweetsnacks/white rabbit/whiterabbithistory.css">
+    <link rel="stylesheet" href="whiterabbithistory.css">
 </head>
 <body>
 
     <div>
-
-        <a href="whiterabbitmain.html"><h1 id="return">return</h1></a>
-    
+        <a href="../white rabbit/whiterabbitmain.html"><h1 id="return">return</h1></a>
     </div>
     
 
 <div>
-
-
     <h1 id="rabbit-name">
 
         white rabbit
-
    </h1>
-
     <div id="slider">
         <div class="slide active" id="slide-1">
 
-           <img src="/sweetimages/rabbit_5.PNG" id="rabbit-5">
+           <img src="../../sweetimages/rabbit_5.png" id="rabbit-5">
 
            <h1 id="header-1">
 
@@ -42,15 +36,15 @@
             </p>
            </div>
 
-           <img src="/doodles/red/history_doodle_1.png" id="history-1">
+           <img src="../../doodles/red/history_doodle_1.png" id="history-1">
 
 
         </div>
         <div class="slide">
 
         <div id="rabbit-images">
-            <img src="/sweetimages/rabbit_2.PNG" id="rabbit-2">
-            <img src="/sweetimages/rabbit_2.PNG" id="rabbit-2-small">
+            <img src="../../sweetimages/rabbit_2.PNG" id="rabbit-2">
+            <img src="../../sweetimages/rabbit_2.PNG" id="rabbit-2-small">
         </div>
 
         <div id=body-2>
@@ -64,12 +58,12 @@
 
         </div>
 
-        <img src="/doodles/red/history_doodle_2.png" id="history-2">
+        <img src="../../doodles/red/history_doodle_2.png" id="history-2">
 
         </div>
         <div class="slide">
 
-           <img src="/sweetimages/rabbit_3.PNG" id="rabbit-3">
+           <img src="../../sweetimages/rabbit_3.PNG" id="rabbit-3">
 
 
         <div id=body-3>
@@ -87,10 +81,10 @@
 
     </div>
 
-    <img src="/sweetimages/pointleft_red.png" id="left-arrow">
-    <img src="/sweetimages/pointright_red.png" id="right-arrow">
+    <img src="../../sweetimages/pointleft_red.png" id="left-arrow">
+    <img src="../../sweetimages/pointright_red.png" id="right-arrow">
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-<script src="./whiterabbithistory.js"> </script> 
+<script src="whiterabbithistory.js"> </script> 
 </body>
 </html>
