--- a/sweetsnacks/white rabbit/whiterabbitrecipe.html
+++ b/sweetsnacks/white rabbit/whiterabbitrecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of white rabbit</h1>
 
 
-        <img src="/sweetimages/rabbit_7.PNG" id="rabbit-7-big">
+        <img src="../../sweetimages/rabbit_7.PNG" id="rabbit-7-big">
  
 
-        <img src="/sweetimages/rabbit_6.PNG" id="rabbit-6-big">
+        <img src="../../sweetimages/rabbit_6.PNG" id="rabbit-6-big">
 
         <h1 id="selection">click either image to learn more about what makes white rabbit special</h1>
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/sweetimages/rabbit_7.PNG" id="rabbit-7">
+        <img src="../../sweetimages/rabbit_7.PNG" id="rabbit-7">
         
 
         <div id="recipe-box">
