--- a/sweetsnacks/yakult/yakultrecipe.html
+++ b/sweetsnacks/yakult/yakultrecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of yakult</h1>
 
 
-        <img src="/sweetimages/yakult_7.PNG" id="yakult-7-big">
+        <img src="../../sweetimages/yakult_7.PNG" id="yakult-7-big">
  
 
-        <img src="/sweetimages/yakult_6.PNG" id="yakult-6-big">
+        <img src="../../sweetimages/yakult_6.PNG" id="yakult-6-big">
 
         <h1 id="selection">click either image to learn more about what makes yakult special</h1>
 
@@ -63,7 +63,7 @@
 
         </h1>
 
-        <img src="/sweetimages/yakult_6.PNG" id="yakult-6">
+        <img src="../../sweetimages/yakult_6.PNG" id="yakult-6">
 
         <div id="slide1-box-1">
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/sweetimages/yakult_7.PNG" id="yakult-7">
+        <img src="../../sweetimages/yakult_7.PNG" id="yakult-7">
         
 
         <div id="recipe-box">
