--- a/saltysnacks/rice/ricerecipe.html
+++ b/saltysnacks/rice/ricerecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of rice crackers</h1>
 
 
-        <img src="/saltyimages/rice_5.PNG" id="rice-7-big">
+        <img src="../../saltyimages/rice_5.PNG" id="rice-7-big">
  
 
-        <img src="/saltyimages/rice_6.PNG" id="rice-6-big">
+        <img src="../../saltyimages/rice_6.PNG" id="rice-6-big">
 
         <h1 id="selection">click either image to learn more about what makes rice crackers special</h1>
 
@@ -63,7 +63,7 @@
 
         </h1>
 
-        <img src="/saltyimages/rice_6.PNG" id="rice-6">
+        <img src="../../saltyimages/rice_6.PNG" id="rice-6">
 
         <div id="slide1-box-1">
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/saltyimages/rice_7.PNG" id="rice-7">
+        <img src="../../saltyimages/rice_7.PNG" id="rice-7">
         
 
         <div id="recipe-box">
