--- a/saltysnacks/spam/spamhistory.html
+++ b/saltysnacks/spam/spamhistory.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>white rabbit history</title>
-    <link rel="stylesheet" href="/saltysnacks/spam/spamhistory.css">
+    <link rel="stylesheet" href="spamhistory.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
     <div id="slider">
         <div class="slide active" id="slide-1">
 
-           <img src="/saltyimages/spam_2.PNG" id="spam-2">
+           <img src="../../saltyimages/spam_2.PNG" id="spam-2">
 
            <h1 id="header-1">
 
@@ -47,7 +47,7 @@
         <div class="slide">
 
         <div id="spam-images">
-            <img src="/saltyimages/spam_4.PNG" id="spam-4">
+            <img src="../../saltyimages/spam_4.PNG" id="spam-4">
 
         </div>
 
@@ -67,7 +67,7 @@
 
         <div class="slide">
 
-           <img src="/saltyimages/spam_3.PNG" id="spam-3">
+           <img src="../../saltyimages/spam_3.PNG" id="spam-3">
 
 
 
@@ -86,8 +86,8 @@
 
     </div>
 
-    <img src="/saltyimages/pointleft_blue.png" id="left-arrow">
-    <img src="/saltyimages/pointright_blue.png" id="right-arrow">
+    <img src="../../saltyimages/pointleft_blue.png" id="left-arrow">
+    <img src="../../saltyimages/pointright_blue.png" id="right-arrow">
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 <script src="./spamhistory.js"> </script> 
