--- a/saltysnacks/spam/spamrecipe.html
+++ b/saltysnacks/spam/spamrecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of spam</h1>
 
 
-        <img src="/saltyimages/spam_5.PNG" id="spam-7-big">
+        <img src="../../saltyimages/spam_5.PNG" id="spam-7-big">
  
 
-        <img src="/saltyimages/spam_6.PNG" id="spam-6-big">
+        <img src="../../saltyimages/spam_6.PNG" id="spam-6-big">
 
         <h1 id="selection">click either image to learn more about what makes spam special</h1>
 
@@ -63,7 +63,7 @@
 
         </h1>
 
-        <img src="/saltyimages/spam_6.PNG" id="spam-6">
+        <img src="../../saltyimages/spam_6.PNG" id="spam-6">
 
         <div id="slide1-box-1">
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/saltyimages/spam_7.PNG" id="spam-7">
+        <img src="../../saltyimages/spam_7.PNG" id="spam-7">
         
 
         <div id="recipe-box">
