--- a/sweetsnacks/panda/pandamain.html
+++ b/sweetsnacks/panda/pandamain.html
@@ -3,27 +3,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>panda main</title>
-    <link rel="stylesheet" href="/sweetsnacks/panda/pandamain.css">
+    <link rel="stylesheet" href="../panda/pandamain.css">
 </head>
 <body>
 
     
     <div>
 
-        <a href="/sweetaisle.html"><h1 id="return">return</h1></a>
+        <a href="../../sweetaisle.html"><h1 id="return">return</h1></a>
     
     </div>
 
 
     <div>
 
-        <img src="/sweetimages/panda_1.PNG" id="panda">
+        <img src="../../sweetimages/panda_1.PNG" id="panda">
 
     </div>
 
     <div>
 
-        <img src="/sweetimages/red-circle.png" id="red-circle">
+        <img src="../../sweetimages/red-circle.png" id="red-circle">
 
     </div>
 
