--- a/sweetsnacks/panda/pandarecipe.html
+++ b/sweetsnacks/panda/pandarecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of hello panda</h1>
 
 
-        <img src="/sweetimages/panda_8.PNG" id="panda-7-big">
+        <img src="../../sweetimages/panda_8.PNG" id="panda-7-big">
  
 
-        <img src="/sweetimages/panda_6.PNG" id="panda-6-big">
+        <img src="../../sweetimages/panda_6.PNG" id="panda-6-big">
 
         <h1 id="selection">click either image to learn more about what makes hello panda special</h1>
 
@@ -63,7 +63,7 @@
 
         </h1>
 
-        <img src="/sweetimages/panda_6.PNG" id="panda-6">
+        <img src="../../sweetimages/panda_6.PNG" id="panda-6">
 
         <div id="slide1-box-1">
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/sweetimages/panda_8.PNG" id="panda-7">
+        <img src="../../sweetimages/panda_8.PNG" id="panda-7">
         
 
         <div id="recipe-box">
