--- a/sweetsnacks/pocky/pockymain.html
+++ b/sweetsnacks/pocky/pockymain.html
@@ -3,26 +3,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pocky main</title>
-    <link rel="stylesheet" href="/sweetsnacks/pocky/pockymain.css">
+    <link rel="stylesheet" href="pockymain.css">
 </head>
 <body>
 
     <div>
 
-        <a href="/sweetaisle.html"><h1 id="return">return</h1></a>
+        <a href="../../sweetaisle.html"><h1 id="return">return</h1></a>
     
     </div>
 
 
     <div>
 
-        <img src="/sweetimages/pocky_1.PNG" id="pocky">
+        <img src="../../sweetimages/pocky_1.PNG" id="pocky">
 
     </div>
 
     <div>
 
-        <img src="/sweetimages/red-circle.png" id="red-circle">
+        <img src="../../sweetimages/red-circle.png" id="red-circle">
 
     </div>
 
