--- a/sweetsnacks/ramune/ramunemain.html
+++ b/sweetsnacks/ramune/ramunemain.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ramune main</title>
-    <link rel="stylesheet" href="/sweetsnacks/ramune/ramunemain.css">
+    <link rel="stylesheet" href="ramunemain.css">
 </head>
 <body>
 
@@ -11,20 +11,20 @@
     
     <div>
 
-        <a href="/sweetaisle.html"><h1 id="return">return</h1></a>
+        <a href="../../sweetaisle.html"><h1 id="return">return</h1></a>
     
     </div>
 
 
     <div>
 
-        <img src="/sweetimages/ramune_1.PNG" id="ramune">
+        <img src="../../sweetimages/ramune_1.PNG" id="ramune">
 
     </div>
 
     <div>
 
-        <img src="/sweetimages/red-circle.png" id="red-circle">
+        <img src="../../sweetimages/red-circle.png" id="red-circle">
 
     </div>
 
