--- a/sweetsnacks/ramune/ramunerecipe.html
+++ b/sweetsnacks/ramune/ramunerecipe.html
@@ -38,10 +38,10 @@
         <h1 id="secrets-header">the secrets of ramune</h1>
 
 
-        <img src="/sweetimages/ramune_7.PNG" id="ramune-7-big">
+        <img src="../../sweetimages/ramune_7.PNG" id="ramune-7-big">
  
 
-        <img src="/sweetimages/ramune_6.PNG" id="ramune-6-big">
+        <img src="../../sweetimages/ramune_6.PNG" id="ramune-6-big">
 
         <h1 id="selection">click either image to learn more about what makes ramune special</h1>
 
@@ -63,7 +63,7 @@
 
         </h1>
 
-        <img src="/sweetimages/ramune_6.PNG" id="ramune-6">
+        <img src="../../sweetimages/ramune_6.PNG" id="ramune-6">
 
         <div id="slide1-box-1">
 
@@ -97,7 +97,7 @@
 
         </h1>
 
-        <img src="/sweetimages/ramune_7.PNG" id="ramune-7">
+        <img src="../../sweetimages/ramune_7.PNG" id="ramune-7">
         
 
         <div id="recipe-box">
