--- a/sweetsnacks/sachima/sachimamain.html
+++ b/sweetsnacks/sachima/sachimamain.html
@@ -3,27 +3,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sachima main</title>
-    <link rel="stylesheet" href="/sweetsnacks/sachima/sachimamain.css">
+    <link rel="stylesheet" href="sachimamain.css">
 </head>
 <body>
 
   
     <div>
 
-        <a href="/sweetaisle.html"><h1 id="return">return</h1></a>
+        <a href="../../sweetaisle.html"><h1 id="return">return</h1></a>
     
     </div>
 
 
     <div>
 
-        <img src="/sweetimages/sachima_1.PNG" id="sachima">
+        <img src="../../sweetimages/sachima_1.PNG" id="sachima">
 
     </div>
 
     <div>
 
-        <img src="/sweetimages/red-circle.png" id="red-circle">
+        <img src="../../sweetimages/red-circle.png" id="red-circle">
 
     </div>
 
