--- a/sweetsnacks/white rabbit/whiterabbitmain.html
+++ b/sweetsnacks/white rabbit/whiterabbitmain.html
@@ -10,20 +10,20 @@
 
     <div>
 
-        <a href="/sweetaisle.html"><h1 id="return">return</h1></a>
+        <a href="../../sweetaisle.html"><h1 id="return">return</h1></a>
     
     </div>
 
 
     <div>
 
-        <img src="/sweetimages/rabbit_1.PNG" id="rabbit">
+        <img src="../../sweetimages/rabbit_1.PNG" id="rabbit">
 
     </div>
 
     <div>
 
-        <img src="/sweetimages/red-circle.png" id="red-circle">
+        <img src="../../sweetimages/red-circle.png" id="red-circle">
 
     </div>
 
