--- a/sweetsnacks/yakult/yakultmain.html
+++ b/sweetsnacks/yakult/yakultmain.html
@@ -3,27 +3,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yakult main</title>
-    <link rel="stylesheet" href="/sweetsnacks/yakult/yakultmain.css">
+    <link rel="stylesheet" href="yakultmain.css">
 
 </head>
 <body>
 
     <div>
 
-        <a href="/sweetaisle.html"><h1 id="return">return</h1></a>
+        <a href="../../sweetaisle.html"><h1 id="return">return</h1></a>
     
     </div>
 
 
     <div>
 
-        <img src="/sweetimages/yakult_1.PNG" id="yakult">
+        <img src="../../sweetimages/yakult_1.PNG" id="yakult">
 
     </div>
 
     <div>
 
-        <img src="/sweetimages/red-circle.png" id="red-circle">
+        <img src="../../sweetimages/red-circle.png" id="red-circle">
 
     </div>
 
